# ChessGPT

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CLOUD_TESTING.md  DATA_STRATEGY.md  Makefile  PHASE1_COMPLETE.md  README.md  define-and-train-model.ipynb  download-all-pgns.py  llm.ipynb  pyproject.toml  reduce-pgn-to-move-lists.ipynb  reduce-pgn-to-move-lists.py
configs/: config.yaml  large.toml  medium.toml  small.toml  tiny.toml
configs/cloud/: lambda.yaml
configs/data/: checkmate_10k.yaml  dataset.yaml  micro_test.yaml  phase1_data.yaml  phase2_data.yaml  test_1k.yaml  test_500.yaml  test_5k.yaml
configs/logging/: wandb.yaml
configs/model/: gpt2_baseline.yaml  gpt2_medium.yaml  gpt2_quick_test.yaml  llama_1b.yaml
configs/pipeline/: checkmate_10k.yaml  full_training.yaml  micro_test_gpt2_medium.yaml  phase1_gpt2_medium.yaml  phase2_gpt2_medium.yaml  quick_test.yaml  small_scale.yaml  test_500.yaml  test_5k.yaml  test_gpt2_medium_1k.yaml
configs/training/: micro_test.yaml  phase1_general.yaml  phase2_checkmate.yaml  quick_test.yaml  test_1epoch.yaml
data/: checkmate_test_puzzles.json  tokenizer.json  tokenizer_large.json
docs/: PLAN.md
examples/: README.md  train_with_huggingface.py  train_with_llama.py
infra/: ecr.tf  iam.tf  lambda.tf  outputs.tf  s3.tf  terraform.tfvars.example  variables.tf
infra/lambda/: Dockerfile  requirements-lambda.txt
notebooks/exploratory/: define_and_train_llm.ipynb  llm.ipynb  run_trained_model.ipynb
scripts/: convert_model.py  explore.py  fit_and_save_tokenizer.py  lichess_downloader.py  models.py  play.py  play_model.sh  prepare_all_data.py  prepare_checkmate_data.py  prepare_training_data.py  quick_data_sample.py  quick_training_test.py  reduce_pgn_to_moves.py  s3_tools.py  s3_utils.py  simple_training_test.py  test_checkmate_ability.py  test_gpt2_medium.py  test_gpt2_medium_memory.py  test_gpt2_medium_simple.py  test_model_next_move.py  test_model_predictions.py  test_train_gpt2_medium.py  test_turn_tracking.py  train.py  train_model.py  verify_masking.py
scripts/cloud/: __init__.py  deploy.py  instances.py  providers.py  remote.py  sync.py  test_local.py
src/chess_model/: __init__.py
src/chess_model/config/: __init__.py  schemas.py
src/chess_model/data/: __init__.py  dataset.py  progressive_dataset.py
src/chess_model/evaluation/: __init__.py  checkmate_analysis.py  metrics.py
src/chess_model/model/: __init__.py  factory.py  llama_chess.py  tokenizer.py  transformer.py  vocab_bridge.py
src/chess_model/models/: __init__.py  transformer.py
src/chess_model/training/: __init__.py  callbacks.py  logger.py  trainer.py  training.py
src/chess_model/util/: __init__.py  pgn.py  preprocessing.py
src/chess_model/utils/: __init__.py  count_lines.py  device.py  pgn.py  preprocessing.py  tokenizer.py
src/chessgpt/cli/: analyze.py  cloud.py  download.py  eval.py  match.py  play.py  prepare.py  train.py
src/chessgpt/cloud/: __init__.py  pricing.py  provider.py  runner.py  ssh.py  state.py
src/chessgpt/cloud/providers/: __init__.py  runpod.py  vastai.py
src/chessgpt/data/: dataset.py  download.py  prepare.py
src/chessgpt/evaluation/: engine_match.py  metrics.py  puzzles.py
src/chessgpt/inference/: player.py
src/chessgpt/lambdas/: download_handler.py  prepare_handler.py
src/chessgpt/model/: attention.py  heads.py  layers.py  tokenizer.py  transformer.py
src/chessgpt/pgn/: utils.py
src/chessgpt/training/: loss.py  trainer.py
src/pgn_utils/: __init__.py  pgn_utils.py
tests/: test_analyze.py  test_chess_dataset.py  test_cloud.py  test_dataset.py  test_e2e.py  test_eval.py  test_match.py  test_model.py  test_model_architecture.py  test_phase1_structure.py  test_phase1_validation.py  test_pipeline.py  test_training.py  validate_imports.py
trained_models/len_25_embd_128_layers_2_heads_2/: README.md  hyperparams.json  model.pth  tokenizer.json
trained_models/len_50_embd_512_layers_4_heads_4/: README.md  hyperparams.json  model.pth  tokenizer.json
trained_models/len_75_embd_1024_layers_8_heads_8/: README.md  hyperparams.json  model.pth  tokenizer.json
trained_models/len_75_embd_512_layers_4_head_4/: README.md  hyperparams.json  model.pth
