[tool.poetry]
name = "ChessGPT"
version = "0.1.0"
description = ""
authors = ["Cody Joseph Krainock <me@codyjoseph.com>"]
readme = "README.md"
packages = [
    {include = "chess_model", from = "src"},
    {include = "pgn_utils", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "^4.66.5"
boto3 = "^1.35.58"
botocore = "^1.35.58"
psutil = "^6.1.0"

[tool.poetry.group.model]
optional = true

[tool.poetry.group.model.dependencies]
transformers = "^4.44.0"
numpy = "^2.0.1"
python-chess = "^1.999"
blessed = "^1.20.0"
torch = "^2.4.0"
# ChessGPT 2026 dependencies
hydra-core = "^1.3.0"
pydantic = "^2.5.0"
omegaconf = "^2.3.0"
wandb = "^0.16.0"
peft = "^0.7.0"
accelerate = "^0.25.0"
click = "^8.1.0"
zstandard = "^0.22.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^24.8.0"
isort = "^5.13.2"
mypy = "^1.11.1"
jupyter = "^1.0.0"
pytest = "^8.3.2"

[tool.poetry.scripts]
# S3 utilities
s3-tree = "scripts.s3_utils:tree_command"
s3-list-pgns = "scripts.s3_utils:list_pgns_command"
s3-extract-games-from-pgns = "scripts.s3_utils:extract_games_command"
s3-extract-checkmates-from-pgns = "scripts.s3_utils:extract_checkmates_command"

# ChessGPT 2026 - New unified CLI
chessgpt = "scripts.chessgpt:cli"

# Legacy scripts (deprecated, will be removed)
reduce-pgn = "scripts.reduce_pgn_to_moves:main"
prepare-training-data = "scripts.prepare_training_data:main"
fit-and-save-tokenizer = "scripts.fit_and_save_tokenizer:main"
train-model = "scripts.train_model:main"
test = "pytest:main"
play = "scripts.play:main"
explore = "scripts.explore:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38', 'py39', 'py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
extend-ignore = ['E203', 'E501']

[tool.mypy]
python_version = 3.8
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
